@@ -1,3 +1,5 @@
+* #5080: Copy to clipboard with targets (morgs)
+
 30
 
 * #5160: Chat should not autoscroll while you scroll up (morgs)
